--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   injectable: ^2.3.2
   get_it: ^7.6.7
   provider: ^6.1.1
+  mocktail: ^1.0.3
+  test: ^1.24.9
 
 dev_dependencies:
   flutter_test:
